fixed the issue of the POST being requiring an id
